# halolive-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
apps/prototypes/: agent-ui-prototype.html
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.jsx  styles.css
examples/: run_async_runtime_session.py  run_basic_plan.py  run_browser_tool_plan.py  run_checkpoint_plan.py  run_prompt_to_async_runtime.py  run_replanning_loop.py  run_tool_middleware_plan.py
src/deep_agents/: __init__.py
src/deep_agents/config/: __init__.py  env.py  settings.py
src/deep_agents/instrumentation/: __init__.py  logging.py
src/deep_agents/langchain/: __init__.py  judges.py  models.py  planners.py  prompt_handlers.py  prompts.py  workers.py
src/deep_agents/models/: __init__.py  agents.py  base.py  context.py  execution.py  judges.py  memory.py  planners.py  planning.py  prompts.py  runtime.py  signals.py  skills.py  tools.py
src/deep_agents/observability/: __init__.py
src/deep_agents/runtime/: __init__.py  agent_registry.py  browser.py  command_executor.py  context.py  dispatcher.py  engine.py  events.py  handoffs.py  long_running.py  memory.py  memory_context.py  plan_tracker.py  prompt_handler.py  prompt_queue.py  tools.py  (+4 more)
tests/: test_async_session.py  test_browser.py  test_config.py  test_context.py  test_examples.py  test_langchain_adapters.py  test_memory.py  test_models.py  test_planner_adapters.py  test_progress_bus.py  test_runtime.py  test_server_bridge.py  test_skills.py  test_tools.py
(+22 files in other folders)
